--- a/exercice-1-start.html
+++ b/exercice-1-start.html
@@ -8,6 +8,8 @@
         margin: 0;
         padding: 0;
         background: pink;
+        padding-left: 10em;
+        padding-right: 10em;
       }
   
       .container {
