--- a/exercice3-start.html
+++ b/exercice3-start.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercice-3</title>
     <style>
+        
         .header{
             background-color: #fff;
             border-radius: 0.5rem;
             box-shadow: 0 2px 5px #0077ea;
         }
         .header h2{
+            color: white;
             background-color: #1e90ff;
             border-radius: 0.5rem;
             padding: 1em;
@@ -28,6 +30,12 @@
             display: flex;
             flex-direction: column;
             flex-grow: 1;
+        }
+        .main h2{
+            color: white;
+        }
+        .sidebar {
+            color: white;
         }
         .item{
             display: flex;
@@ -52,6 +60,7 @@
         }
 
         .footer h2{
+            color: white;
             background-color: #4169e1;
             border-radius: 0.5rem;
             box-shadow: 0 2px 5px #1d44b8;
